Improve code style